# smart-box

./: .dockerignore  .env  .env.dev  Dockerfile  README.md  alembic.ini  docker-compose.debug.yaml  docker-compose.yaml  entrypoint.sh  init-db.sh  pyproject.toml
app/api/: main.py
app/api/dto/: box.py
app/api/v1/: __init__.py  box_router.py
app/app/core/container/: app.py
app/app/entrypoint/api/: main.py
app/app/entrypoint/api/v1/: box_router.py
app/app/infrastructure/db/repositories/: box.py
app/core/: settings.py
app/core/container/: app.py
app/core/http_client/: httpx_async.py
app/domain/: box.py
app/entrypoint/api/: main.py
app/entrypoint/api/dto/: box.py
app/entrypoint/api/openapi/: examples.py
app/entrypoint/api/v1/: __init__.py  box_router.py
app/service/: box.py  create_box.py
db/migrations/: env.py
db/migrations/versions/: 66f23c16a002_create_box.py
src/app/core/: app.py  configuration.py  settings.py
src/app/core/container/: app.py
src/app/domain/: user.py
src/app/infrastructure/db/: engine.py
src/app/infrastructure/db/models/: user.py
src/app/infrastructure/db/ports/: user_port.py
src/app/infrastructure/db/repositories/: user_repository.py
src/app/main/: app.py  configuration.py
src/app/service/: create_user.py
