[tool.poetry]
name = "smart-box"
version = "0.1.0"
description = ""
authors = ["matheusses <matheus.s.es@gmail.com>"]
readme = "README.md"
packages = [{include = "smart_box", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
