[tool.poetry]
name = "smart-box"
version = "0.1.0"
description = ""
authors = ["matheusses <matheus.s.es@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.2"
python-dotenv = "^1.0.1"
dependency-injector = "^4.41.0"
alembic = "^1.13.1"
pydantic-settings = "^2.3.1"
starlette = "^0.37.2"
debugpy = "^1.8.2"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
